--- a/test/index.html
+++ b/test/index.html
@@ -7,13 +7,17 @@
   <script src="../node_modules/chai/chai.js"></script>
   <script>
     mocha.setup('bdd');
-    window.onload = function() {
-        mocha.run();
-    };
   </script>
 </head>
 <body>
   <div id="mocha"></div>
   <script src="../.tmp/index.js"></script>
+  <script>
+    // If tests run in a real browser
+    // Can alternatively do a check on window.PHANTOMJS
+    if (navigator.userAgent.indexOf('PhantomJS') < 0) {
+        mocha.run();
+    }
+  </script>
 </body>
 </html>
